# modelspace-release

./: .bashrc  .gitignore  .gitmodules  CMakeLists.txt  README.md  startup.sh
.devcontainer/: devcontainer.json  install.sh  requirements.txt
cpp/locations/: locations.cpp  locations.h
cpp/src/: projenvironment.h
cpp/src/models/: SlopeInterceptModel.cpp  SlopeInterceptModel.h
docs/: CMakeAsciidoc.cmake
docs/docs_doxygen/: Doxyfile  attx.css
docs/release_notes/: release_notes_ms_v1_0_0.adoc
license/: attx_license.adoc  header.cpp  header.py
swig/: AutogenSwigFiles.py  projenvironment.i  swigtemplate.txt
